# idocp-sim

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/anymal/: CMakeLists.txt  posture.cpp  posture_control.cpp  posture_cost.cpp  posture_cost.hpp
examples/anymal/anymal_b_simple_description/urdf_sim/: anymal.urdf
include/idocp-sim/: idocp-sim.hpp  raisim_wrapper.hpp  sim_data_logger.hpp
src/: idocp-sim.cpp  raisim_wrapper.cpp  sim_data_logger.cpp
